# lb

./: .dockerignore  .gitignore  CLAUDE.md  HANDOVER-reports.md  MIGRATION.md  Makefile  PRODUCT.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
clients/python/: README.md  example.py  pyproject.toml
clients/python/lb_client/: __init__.py  client.py  ingest.py  mcp.py  webhook.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: roundtrip.rs
clients/rust/src/: client.rs  error.rs  ingest.rs  lib.rs  mcp.rs  webhook.rs
rust/: Cargo.toml  Cargo.toml.workspace_members_check  README.md  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/apikey/: Cargo.toml
rust/crates/assets/: Cargo.toml  build.rs
rust/crates/auth/: Cargo.toml
rust/crates/authz/: Cargo.toml
rust/crates/bus/: Cargo.toml
rust/crates/caps/: Cargo.toml
rust/crates/devkit/: Cargo.toml
rust/crates/ext-loader/: Cargo.toml
rust/crates/external-agent/: Cargo.toml
rust/crates/extract/: Cargo.toml
rust/crates/federation/: Cargo.toml  build.sh
rust/crates/flows/: Cargo.toml
rust/crates/frame/: Cargo.toml
rust/crates/grafana-map/: Cargo.toml
rust/crates/host/: Cargo.toml
rust/crates/inbox/: Cargo.toml
rust/crates/ingest/: Cargo.toml
rust/crates/insights/: Cargo.toml
rust/crates/jobs/: Cargo.toml
rust/crates/mcp/: Cargo.toml
rust/crates/mcp-shim/: Cargo.toml
rust/crates/outbox/: Cargo.toml
rust/crates/packs/: Cargo.toml
rust/crates/prefs/: Cargo.toml
rust/crates/prql/: Cargo.toml
rust/crates/registry/: Cargo.toml
rust/crates/reminders/: Cargo.toml
rust/crates/render/: Cargo.toml
rust/crates/rules/: Cargo.toml
rust/crates/run-events/: Cargo.toml
rust/crates/runtime/: Cargo.toml  build.rs
rust/crates/secrets/: Cargo.toml
rust/crates/sidecar-client/: Cargo.toml
rust/crates/store/: Cargo.toml
rust/crates/supervisor/: Cargo.toml
rust/crates/sync/: Cargo.toml
rust/crates/tags/: Cargo.toml
rust/crates/telemetry/: Cargo.toml
rust/crates/undo/: Cargo.toml
rust/crates/viz/: Cargo.toml
rust/extensions/: README.md
rust/extensions-ui/proof-panel/: index.html
rust/extensions/control-engine/: Cargo.toml  build.sh  extension.toml
rust/extensions/devkit-build-native-145014/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-1459592/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-1556944/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-194273/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-2833085/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-2886399/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-2936552/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-2948524/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-2994837/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3030344/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3059719/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3074654/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3150613/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3220059/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-325745/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3271071/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3330866/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3336855/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3383209/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-3531573/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-476797/: Cargo.toml  extension.toml
rust/extensions/devkit-build-native-85938/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-145014/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-1459592/: Cargo.toml  build.sh  extension.toml
rust/extensions/devkit-build-wasm-1556944/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-194273/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-2833085/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-2886399/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-2936552/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-2948524/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-2994837/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3030344/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3059719/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3074654/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3150613/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3220059/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-325745/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3271071/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3330866/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3336855/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3383209/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-3531573/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-476797/: Cargo.toml  extension.toml
rust/extensions/devkit-build-wasm-85938/: Cargo.toml  extension.toml
rust/extensions/devkit-credential-2528257/: Cargo.toml  extension.toml
rust/extensions/devkit-credential-868799/: Cargo.toml  extension.toml
rust/extensions/devkit-e2e-wasm-102936/: Cargo.toml  extension.toml
rust/extensions/echarts-panel/: SCOPE.md  (+3 more)
rust/node/: Cargo.toml
rust/scripts/: check-file-size.sh
rust/sdk/: Cargo.toml
scripts/claude-switch/: Cargo.toml  README.md  config.example.yaml
scripts/gj/: Cargo.toml  README.md
scripts/pq/: Cargo.toml  README.md
tools/diskwarden/: Cargo.toml
tools/grafana-conv/: Cargo.toml  Makefile  README.md
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+5117 files in other folders)
