# Lazybones — one Cargo workspace.
# Core crates compile into every node; role-only crates and the `node` binary wire them
# together and select edge/cloud roles by config. See docs/scope/crate-layout/.
#
# The hello extension (extensions/hello) is a wasm32-wasip2 guest and is INTENTIONALLY
# excluded from the workspace: it targets a different platform and is built separately by
# the host's build script. Listing it as a workspace member would force the whole workspace
# onto the wasm target.
[workspace]
resolver = "2"
members = [
    "crates/assets",
    "crates/auth",
    "crates/authz",
    "crates/bus",
    "crates/caps",
    "crates/devkit",
    "crates/ext-loader",
    "crates/host",
    "crates/inbox",
    "crates/ingest",
    "crates/jobs",
    "crates/mcp",
    "crates/outbox",
    "crates/prefs",
    "crates/registry",
    "crates/rules",
    "crates/run-events",
    "crates/runtime",
    "crates/secrets",
    "crates/store",
    "crates/supervisor",
    "crates/sync",
    "crates/tags",
    "crates/undo",
    "extensions/echo-sidecar",
    "extensions/federation",
    "extensions/fleet-monitor",
    "sdk",
    "node",
    "role/acp",
    "role/gateway",
    "role/ai-gateway",
    "role/registry-host",
    "role/github-webhook",
    "role/github-target",
    "role/github-workflow",
    "role/bootstrap-ui",
    "tools/pack",
]
exclude = ["extensions/hello", "extensions/hello-v2", "extensions/github-bridge", "extensions/proof-panel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.90"

# One place for the shared stack. Crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# core platform crates (path deps; the §9 crate map)
lb-assets = { path = "crates/assets" }
lb-auth = { path = "crates/auth" }
lb-authz = { path = "crates/authz" }
lb-bus = { path = "crates/bus" }
lb-caps = { path = "crates/caps" }
lb-devkit = { path = "crates/devkit" }
lb-ext-loader = { path = "crates/ext-loader" }
lb-inbox = { path = "crates/inbox" }
lb-ingest = { path = "crates/ingest" }
lb-jobs = { path = "crates/jobs" }
lb-mcp = { path = "crates/mcp" }
lb-outbox = { path = "crates/outbox" }
lb-prefs = { path = "crates/prefs" }
lb-registry = { path = "crates/registry" }
lb-rules = { path = "crates/rules" }
lb-run-events = { path = "crates/run-events" }
lb-runtime = { path = "crates/runtime" }
lb-secrets = { path = "crates/secrets" }
lb-store = { path = "crates/store" }
lb-supervisor = { path = "crates/supervisor" }
lb-sync = { path = "crates/sync" }
lb-tags = { path = "crates/tags" }
lb-undo = { path = "crates/undo" }
lb-host = { path = "crates/host" }
lb-sdk = { path = "sdk" }

# role crates (the §8 role layer). Roles depend on host, never the reverse; listed here so a
# crate — or a host DEV-dependency, as in the S5 agent tests — can inherit one by `{ workspace
# = true }` without breaking the symmetric-layering rule (the host never build-depends on a role).
lb-role-ai-gateway = { path = "role/ai-gateway" }
lb-role-github-webhook = { path = "role/github-webhook" }
lb-role-github-target = { path = "role/github-target" }
lb-role-github-workflow = { path = "role/github-workflow" }

# the stack (docs/key-stack.md)
# Two embedded KV backends are compiled in: `kv-mem` (tests / dev — `Store::memory()`) and
# `kv-surrealkv` (a real node's persistent on-disk store — `Store::open(path)`). Both are present
# at compile time on EVERY node; which *constructor* runs is a config decision at boot
# (`LB_STORE_PATH`), never an `if cloud` branch in a core crate (symmetric nodes, rule #1). The
# persistent backend was pinned to SurrealKV by the S9 store spike (pure-Rust, no C++ toolchain —
# the "builds anywhere / on a Pi" posture); see docs/scope/store/persistent-backend-scope.md.
surrealdb = { version = "2", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
zenoh = "1"
wasmtime = { version = "39", default-features = false, features = ["runtime", "component-model", "cranelift"] }
wasmtime-wasi = "39"

# shared utilities
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
if-addrs = "0.13"
hostname = "0.4"
# `process` + `io-util` + `time`: the native Tier-2 supervisor spawns and frames JSON-RPC over a
# child's stdio with health timers (lb-supervisor, native-tier scope). Core crates use only the S1
# subset; the extra features are additive (one tokio in the workspace).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# Artifact content digest for the signed extension registry (registry scope). SHA-256 over
# manifest ‖ wasm; the Ed25519 signature (above) is over that digest.
sha2 = "0.10"
# HMAC-SHA256 for the GitHub webhook signature (`X-Hub-Signature-256`). Pairs with `sha2` (above);
# lives in the `github-webhook` role crate (the inbound HTTP edge), never in core `lb-host`.
hmac = "0.12"

# HTTP/SSE gateway (the browser path, README §6.13). axum is the chosen Rust web framework
# (key-stack listed it TBD; resolved here). tower-http adds permissive CORS for the dev UI.
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"

# The registry-host client (`HttpSource`) — the first outbound HTTP *client* in the tree (previously
# only a gateway dev-dep). `rustls` so there is no system OpenSSL dependency; `json` for the artifact
# body. Lives in the `registry-host` role crate, never in core `lb-host` (roles depend on host).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = "thin"

# Dev build tuning to stop the linker from blowing up RAM (and freezing the
# desktop). Default dev builds embed FULL debug info, which forces `rust-lld` to
# chew through gigabytes per link (~4 GB each was seen with several linkers at
# once -> swap thrash -> crash).
#   - split-debuginfo = "unpacked": keep debug info in separate .dwo files so the
#     linker doesn't have to load/relocate it all into the final binary. Biggest
#     single win for link-time RAM and target/ size.
#   - debug = "line-tables-only": enough for backtraces with file:line, a
#     fraction of the size of full DWARF.
[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"
