# Lazybones — one Cargo workspace.
# Core crates compile into every node; role-only crates and the `node` binary wire them
# together and select edge/cloud roles by config. See docs/scope/crate-layout/.
#
# The hello extension (extensions/hello) is a wasm32-wasip2 guest and is INTENTIONALLY
# excluded from the workspace: it targets a different platform and is built separately by
# the host's build script. Listing it as a workspace member would force the whole workspace
# onto the wasm target.
[workspace]
resolver = "2"
members = [
    "crates/assets",
    "crates/apikey",
    "crates/auth",
    "crates/authz",
    "crates/bus",
    "crates/caps",
    "crates/devkit",
    "crates/ext-loader",
    "crates/external-agent",
    "crates/frame",
    "crates/flows",
    "crates/host",
    "crates/inbox",
    "crates/ingest",
    "crates/jobs",
    "crates/mcp",
    "crates/outbox",
    "crates/prefs",
    "crates/prql",
    "crates/registry",
    "crates/reminders",
    "crates/rules",
    "crates/run-events",
    "crates/runtime",
    "crates/secrets",
    "crates/sidecar-client",
    "crates/store",
    "crates/supervisor",
    "crates/sync",
    "crates/tags",
    "crates/telemetry",
    "crates/undo",
    "crates/viz",
    "extensions/control-engine",
    "extensions/echo-sidecar",
    "extensions/federation",
    "extensions/fleet-monitor",
    "extensions/ros",
    "sdk",
    "node",
    "role/acp",
    "role/external-agent",
    "role/gateway",
    "role/ai-gateway",
    "role/registry-host",
    "role/github-webhook",
    "role/github-target",
    "role/github-workflow",
    "role/bootstrap-ui",
    "role/cli",
    "tools/pack",
]
exclude = ["extensions/hello", "extensions/hello-v2", "extensions/github-bridge", "extensions/proof-panel", "extensions/echarts-panel", "extensions/thecrew"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.90"

# One place for the shared stack. Crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# core platform crates (path deps; the §9 crate map)
lb-assets = { path = "crates/assets" }
lb-apikey = { path = "crates/apikey" }
lb-auth = { path = "crates/auth" }
lb-authz = { path = "crates/authz" }
lb-bus = { path = "crates/bus" }
lb-caps = { path = "crates/caps" }
lb-devkit = { path = "crates/devkit" }
lb-ext-loader = { path = "crates/ext-loader" }
lb-frame = { path = "crates/frame" }
lb-flows = { path = "crates/flows" }
lb-inbox = { path = "crates/inbox" }
lb-ingest = { path = "crates/ingest" }
lb-jobs = { path = "crates/jobs" }
lb-mcp = { path = "crates/mcp" }
lb-outbox = { path = "crates/outbox" }
lb-prefs = { path = "crates/prefs" }
lb-prql = { path = "crates/prql" }
lb-reminders = { path = "crates/reminders" }
lb-registry = { path = "crates/registry" }
lb-rules = { path = "crates/rules" }
lb-run-events = { path = "crates/run-events" }
lb-runtime = { path = "crates/runtime" }
lb-secrets = { path = "crates/secrets" }
lb-sidecar-client = { path = "crates/sidecar-client" }
lb-store = { path = "crates/store" }
lb-supervisor = { path = "crates/supervisor" }
lb-sync = { path = "crates/sync" }
lb-tags = { path = "crates/tags" }
lb-telemetry = { path = "crates/telemetry" }
lb-undo = { path = "crates/undo" }
lb-viz = { path = "crates/viz" }
lb-host = { path = "crates/host" }
lb-sdk = { path = "sdk" }
# The external-agent driver (leaf) + its role crate (external-agent topic). The leaf carries no ACP
# SDK and is a plain member; the role crate is pulled ONLY behind the `external-agent` feature on the
# `node` binary (runtime-seam #1 "the node pulls it only with the feature"), so a feature-off node
# never compiles it — the OFF-build ACP-deps-absent gate.
lb-external-agent = { path = "crates/external-agent" }
lb-role-external-agent = { path = "role/external-agent" }

# role crates (the §8 role layer). Roles depend on host, never the reverse; listed here so a
# crate — or a host DEV-dependency, as in the S5 agent tests — can inherit one by `{ workspace
# = true }` without breaking the symmetric-layering rule (the host never build-depends on a role).
lb-role-gateway = { path = "role/gateway" }
lb-role-ai-gateway = { path = "role/ai-gateway" }
lb-role-github-webhook = { path = "role/github-webhook" }
lb-role-github-target = { path = "role/github-target" }
lb-role-github-workflow = { path = "role/github-workflow" }

# the stack (docs/key-stack.md)
# Two embedded KV backends are compiled in: `kv-mem` (tests / dev — `Store::memory()`) and
# `kv-surrealkv` (a real node's persistent on-disk store — `Store::open(path)`). Both are present
# at compile time on EVERY node; which *constructor* runs is a config decision at boot
# (`LB_STORE_PATH`), never an `if cloud` branch in a core crate (symmetric nodes, rule #1). The
# persistent backend was pinned to SurrealKV by the S9 store spike (pure-Rust, no C++ toolchain —
# the "builds anywhere / on a Pi" posture); see docs/scope/store/persistent-backend-scope.md.
surrealdb = { version = "2", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
# The PRQL authoring layer (query scope): `lb-prql` embeds `prqlc` as a pure compile-only library —
# PRQL → SQL per dialect, zero I/O. Pinned; a bump is a reviewed change with re-frozen goldens.
prqlc = { version = "0.13", default-features = false }
zenoh = "1"
wasmtime = { version = "39", default-features = false, features = ["runtime", "component-model", "cranelift"] }
wasmtime-wasi = "39"

# Monotonic, lexicographically-sortable ids for the capped-retention rings (telemetry scope). No
# clock, no counter row — ULID is the FIFO ordering key AND the record id.
ulid = "1"
# shared utilities
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
# JSON-Schema 2020-12 validation (flows node-descriptor scope, Decision 3): the inline `[[node]]`
# config schema is compiled + instances validated host-side by `jsonschema` (Boon), and editor-side
# by `ajv`. The one dialect the platform standardizes on for any record carrying a user config.
# `default-features = false` drops the `resolve-http` default feature (and its `reqwest` +
# `native-tls`/`openssl-sys` chain): we only compile a schema + validate local instances
# (`validator_for`, no remote `$ref` fetch), so the HTTP retriever is dead weight — and its
# `reqwest` default-tls pulls a system-OpenSSL dep that breaks builds on toolchains without
# pkg-config/libssl (this box is zig-only). Core 2020-12 validation stays on by default.
jsonschema = { version = "0.30", default-features = false }
# The data/JSON node pack parse crates (flows data-nodes scope, Risk 4). Minimal, well-audited,
# pure-Rust readers/writers pulled ONLY into `lb-flows` for the `csv`/`xml`/`yaml`/`base64` built-in
# nodes: `csv` (Node-RED CSV parity), `quick-xml` (event-driven XML, no C++ dep), `serde_yaml`
# (YAML 1.2 ↔ serde), `base64` (the text/bytes boundary). A parse of malformed input FAILS the node
# (json-node parity). No heavy templating engine — the `template` node uses a hand-rolled
# mustache-lite over these same serde values (no crate).
csv = "1"
quick-xml = { version = "0.41", features = ["serialize"] }
serde_yaml = "0.9"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
# The cron "next after T" math (reminders scope): `Cron::find_next_occurrence(&DateTime, inclusive)`
# runs on the injected logical clock, never wall-clock. Lives only in `lb-reminders`.
croner = "3"
# Structured telemetry (observability scope): the one span/event vocabulary every node emits, and the
# subscriber layers that select the sink (stderr / the capped SurrealDB ring / OTLP) by config — never
# a code branch on role. The `SurrealCappedLayer` (lb-telemetry) writes the redacted event schema to a
# FIFO-capped `telemetry` table (telemetry-console scope).
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "std", "fmt", "env-filter"] }
iana-time-zone = "0.1"
if-addrs = "0.13"
hostname = "0.4"
# `process` + `io-util` + `time`: the native Tier-2 supervisor spawns and frames JSON-RPC over a
# child's stdio with health timers (lb-supervisor, native-tier scope). Core crates use only the S1
# subset; the extra features are additive (one tokio in the workspace).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# Artifact content digest for the signed extension registry (registry scope). SHA-256 over
# manifest ‖ wasm; the Ed25519 signature (above) is over that digest.
sha2 = "0.10"
# HMAC-SHA256 for the GitHub webhook signature (`X-Hub-Signature-256`). Pairs with `sha2` (above);
# lives in the `github-webhook` role crate (the inbound HTTP edge), never in core `lb-host`.
hmac = "0.12"

# HTTP/SSE gateway (the browser path, README §6.13). axum is the chosen Rust web framework
# (key-stack listed it TBD; resolved here). tower-http adds permissive CORS for the dev UI.
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"

# The registry-host client (`HttpSource`) — the first outbound HTTP *client* in the tree (previously
# only a gateway dev-dep). `rustls` so there is no system OpenSSL dependency; `json` for the artifact
# body. Lives in the `registry-host` role crate, never in core `lb-host` (roles depend on host).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Operator CLI (`lb`) tooling (operator-cli scope, Risk "New external deps"). These are CLI ergonomics
# — argument parsing + table rendering + the config-dir locator — NOT persistence/auth/bus libraries,
# so they do not touch rules 1/2/9 (one datastore / no sneaking libs / native on owned seams). Stated
# explicitly like api-keys did for its crypto choice. `reqwest` (above) is already the workspace's HTTP
# client; `clap`(derive) + `tabled` + `dirs` are the only additions.
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.17"
dirs = "5"
# The per-workspace model memoization cache (active-agent-wiring scope, Slice 2): a concurrent map
# `(ws, endpoint-hash) → Arc<dyn ErasedModel>` on the `Node`, so rules/loop don't rebuild an
# `AiGateway` per call. Lock-free reads (the hot path); invalidated on `agent.config.set`. Used by
# core `lb-host` only — it is state on the node spine, not a role concern.
dashmap = "6"
# Test-only: a scratch config/key dir for the CLI's config-persistence + 0600-perms unit tests, and a
# throwaway `LB_DIR` for the live gateway/local integration tests (real store, real socket — no mocks).
tempfile = "3"

[profile.release]
lto = "thin"

# Dev build tuning to stop the linker from blowing up RAM (and freezing the
# desktop). Default dev builds embed FULL debug info, which forces `rust-lld` to
# chew through gigabytes per link (~4 GB each was seen with several linkers at
# once -> swap thrash -> crash).
#   - split-debuginfo = "unpacked": keep debug info in separate .dwo files so the
#     linker doesn't have to load/relocate it all into the final binary. Biggest
#     single win for link-time RAM and target/ size.
#   - debug = "line-tables-only": enough for backtraces with file:line, a
#     fraction of the size of full DWARF.
[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"
