# The `node` binary — wires the core crates together and selects roles by config (README §9).
# This is one of the two thin role-aware layers (§3.1): no core crate is role-aware, the role
# selection lives here. S1 runs solo.
[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
lb-host.workspace = true
lb-auth.workspace = true
lb-mcp.workspace = true
lb-role-gateway = { path = "../role/gateway" }
# The github workflow roles, mounted by config (§3.1): the webhook front door (ingress), the GitHub
# HTTP `Target` (egress), and the background driver (the relay + reactor loop). All env-gated in
# `main.rs` — absent config = the solo demo, never an `if cloud` in a core crate.
lb-role-github-webhook.workspace = true
lb-role-github-target.workspace = true
lb-role-github-workflow.workspace = true
anyhow.workspace = true
tokio.workspace = true
