# The `node` binary — wires the core crates together and selects roles by config (README §9).
# This is one of the two thin role-aware layers (§3.1): no core crate is role-aware, the role
# selection lives here. S1 runs solo.
[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
lb-host.workspace = true
lb-telemetry.workspace = true
lb-store.workspace = true
lb-auth.workspace = true
lb-authz.workspace = true
lb-mcp.workspace = true
# The control-engine bridge role seeds one appliance via a `control-engine.appliance.add` MCP call at
# boot (env-gated in `main.rs`, §3.1) — it builds the JSON args with serde_json.
serde_json.workspace = true
# The native supervisor's `OsLauncher` — the federation role (datasources) installs + supervises the
# `federation` sidecar at boot, env-gated in `main.rs` (§3.1), exactly like the github roles below.
lb-supervisor.workspace = true
lb-role-gateway = { path = "../role/gateway" }
# The AI-gateway role (in-house model seam, default-agent-wiring). The node builds the real
# `AiGateway<Provider>` as the in-house `ModelAccess` from node config and installs it on the runtime
# registry (unconfigured → the honest `UnconfiguredModel`, symmetric on every node). NOT feature-gated:
# the in-house default agent is present on every node regardless of the external-agent feature.
lb-role-ai-gateway.workspace = true
# The external-agent role (external-agent topic, runtime-seam #1). OPTIONAL + behind the
# `external-agent` feature: a default `cargo build` does NOT compile it (nor its transitive
# `lb-external-agent`), so the OFF build carries none of the external-agent code — the compile-time
# optionality gate. Built with `cargo build -p node --features external-agent`.
lb-role-external-agent = { workspace = true, optional = true }
anyhow.workspace = true
tokio.workspace = true

[features]
# OFF by default (runtime-seam-scope: "the `external-agent` cargo feature, OFF by default"). Turning
# it on pulls the role crate and lets the node register the external `AcpRuntime` entries into its
# runtime registry; off leaves a default-only registry with zero external surface.
default = []
external-agent = ["dep:lb-role-external-agent"]
