# The SDK crate — the STABLE boundary. Holds the WIT contract (sdk/wit/) and the host-side
# constants that pin its version. Extension authors (guests) generate bindings from the same
# WIT via wit-bindgen; the host generates its side via wasmtime bindgen in the `runtime`
# crate. One WIT, two generated sides — the contract cannot drift (crate-layout scope).
[package]
name = "lb-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
