[package]
name = "claude-switch"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Toggle Claude Code between Claude and GLM (z.ai) server configurations"
publish = false

[[bin]]
name = "claude-switch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

[profile.release]
lto = "thin"
