[package]
name = "pq"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Reusable prompt and workflow CLI"
publish = false

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
dirs = "5"
inquire = "0.7"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
