# The Tauri v2 desktop shell — wraps the React build and exposes the local node to it over
# IPC commands (`channel_post`, `channel_history`), mirroring the Rust channel verbs and the
# TS api client one-to-one. The node runs IN-PROCESS here: the shell IS a node (symmetric
# nodes, §3.1) with a window attached.
#
# NOTE: building the native window needs the system webkit2gtk toolchain (not assumed
# present in CI). The command layer + its logic are unit-tested without a window
# (`cargo test -p lazybones-shell`); the windowed `tauri build` is a packaging step for a
# machine with the desktop toolchain.
[package]
name = "lazybones-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
# The command layer is a library so it can be unit-tested headlessly; the bin attaches the
# window.
name = "lazybones_shell"
path = "src/lib.rs"

[[bin]]
name = "lazybones-shell"
path = "src/main.rs"

[dependencies]
lb-host = { path = "../../rust/crates/host" }
lb-auth = { path = "../../rust/crates/auth" }
lb-inbox = { path = "../../rust/crates/inbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Tauri itself is an optional dep behind the `desktop` feature so the headless command-layer
# tests don't need the webkit toolchain. `cargo build`/`test` (no feature) skip it; a desktop
# packaging build enables `--features desktop`.
[dependencies.tauri]
version = "2"
optional = true
features = []

[features]
desktop = ["dep:tauri"]

[build-dependencies]
# Pure-Rust codegen (no system libs). build.rs only *calls* it for the `desktop` feature.
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
