# The Tauri v2 desktop shell — wraps the React build and exposes the local node to it over
# IPC commands (`channel_post`, `channel_history`), mirroring the Rust channel verbs and the
# TS api client one-to-one. The node runs IN-PROCESS here: the shell IS a node (symmetric
# nodes, §3.1) with a window attached.
#
# NOTE: building the native window needs the system webkit2gtk toolchain (not assumed
# present in CI). The command layer + its logic are unit-tested without a window
# (`cargo test -p lazybones-shell`); the windowed `tauri build` is a packaging step for a
# machine with the desktop toolchain.
[package]
name = "lazybones-shell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
# The command layer is a library so it can be unit-tested headlessly; the bin attaches the
# window.
name = "lazybones_shell"
path = "src/lib.rs"

[[bin]]
name = "lazybones-shell"
path = "src/main.rs"

[dependencies]
lb-host = { path = "../../rust/crates/host" }
lb-auth = { path = "../../rust/crates/auth" }
lb-inbox = { path = "../../rust/crates/inbox" }
# The gateway + authz crates are only needed for the `full` build mode (mounting the SSE/HTTP
# gateway in-process on loopback + the boot identity seed). Optional, like tauri, so the
# headless command layer and the thin `desktop` shell never pull them in.
lb-role-gateway = { path = "../../rust/role/gateway", optional = true }
lb-authz = { path = "../../rust/crates/authz", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Tauri itself is an optional dep behind the `desktop` feature so the headless command-layer
# tests don't need the webkit toolchain. `cargo build`/`test` (no feature) skip it; a desktop
# packaging build enables `--features desktop`.
[dependencies.tauri]
version = "2"
optional = true
features = []

[features]
desktop = ["dep:tauri"]
# `full` = the standalone desktop product. Implies `desktop` (it still opens a window) and
# additionally mounts the SSE/HTTP gateway in-process on a loopback port + runs the boot
# seeders, so the packaged binary is a 100% standalone node — login, MCP, SSE, the agent
# catalog, flows, all of it — with no external node to talk to. The webview talks to the
# loopback gateway over HTTP exactly as the browser does against `make dev`. See
# docs/scope/desktop/desktop-standalone-backend-scope.md.
full = ["desktop", "dep:lb-role-gateway", "dep:lb-authz"]

[build-dependencies]
# Pure-Rust codegen (no system libs). build.rs only *calls* it for the `desktop` feature.
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# reqwest drives the loopback gateway from the full-mode integration test (login + mcp/call
# over real HTTP) — proving the standalone backend answers a real client with no display.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
