[package]
name = "lb-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lb-store.workspace = true
lb-flows.workspace = true
serde.workspace = true
serde_json.workspace = true
base64ct = { version = "1", features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
