[package]
name = "lb-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ed25519-dalek = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
thiserror.workspace = true
rand.workspace = true
