[package]
name = "lb-devkit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lb-registry.workspace = true
anyhow.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
